# worm-reproduction

./: .gitignore  README.md  csv_parser.py  email_dataset_extraction.py  index.html  pyproject.toml  test.csv
attack/: construct_vector_db.py  email_manager.py  employee_manager.py  locations.py  rag_context.py  rag_deletion.py  rag_manager.py  worm_attack.py
evals/graphs/: graph_embedding_effect.py  graph_prefix_effect.py
evals/inspect/: embeddings_task.py  prefix_attach_uuid.py  prefix_effect.py  prefix_generate_dataset.py  prefix_task.py
models/: embeddings.py  employee_email.py  sent_or_received.py
prompts/: prefixes.py  use_cases.py  worm_prompt.py
server/: main.py
worm-frontend/: package-lock.json  package.json
worm-frontend/src/: App.tsx  EmailManager.ts
worm-frontend/src/pages/: EmailDetail.css  EmailDetail.tsx  EmailDetailContent.tsx  EmailList.css  EmailList.tsx  MultiEmailDetail.css  MultiEmailDetail.tsx
