[project]
name = "worm-reproduction"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "faiss-cpu>=1.12.0",
    "huggingface-hub>=0.34.4",
    "inspect-ai>=0.3.125",
    "langchain>=0.3.27",
    "langchain-community>=0.3.27",
    "langchain-huggingface>=0.3.1",
    "langchain-openai>=0.3.31",
    "mail-parser>=4.1.4",
    "matplotlib>=3.10.5",
    "more-itertools>=10.7.0",
    "notebook>=7.4.5",
    "pandas>=2.3.2",
    "sentence-transformers>=5.1.0",
    "tiktoken>=0.11.0",
]
